@@ -1,15 +1,36 @@
+/****************************************************************************
+ Copyright (c) 2013-2014 Chukong Technologies Inc.
+
+ http://www.cocos2d-x.org
+
+ Permission is hereby granted, free of charge, to any person obtaining a copy
+ of this software and associated documentation files (the "Software"), to deal
+ in the Software without restriction, including without limitation the rights
+ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ copies of the Software, and to permit persons to whom the Software is
+ furnished to do so, subject to the following conditions:
+
+ The above copyright notice and this permission notice shall be included in
+ all copies or substantial portions of the Software.
+
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ THE SOFTWARE.
+ ****************************************************************************/
+
 #include "VisibleRect.h"
 
 Rect VisibleRect::s_visibleRect;
 
 void VisibleRect::lazyInit()
 {
-    if (s_visibleRect.size.width == 0.0f && s_visibleRect.size.height == 0.0f)
-    {
-        auto glView = Director::getInstance()->getOpenGLView();
-        s_visibleRect.origin = glView->getVisibleOrigin();
-        s_visibleRect.size = glView->getVisibleSize();
-    }
+    // no lazy init
+    // Useful if we change the resolution in runtime
+    s_visibleRect = Director::getInstance()->getOpenGLView()->getVisibleRect();
 }
 
 Rect VisibleRect::getVisibleRect()
