@@ -1,6 +1,7 @@
 cocos2d-x-3.0rc0 Feb.?? 2014
 [All]
      [NEW]          Adds Dutch Language support.
+     [NEW]          Console: Added 'resolution', 'projection' commands. Improved API
 
      [FIX]          EGLView improvements: renamed to GLView, no longer a singleton, easier to customize
      [FIX]          Removes samples except testcpp|testjavascript|testlua. Moves sample games to `cocos2d/samples` repo.
